update YAML file

--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform Your Business</title>
+    <title>Enbros Technologies — Software Development & Digital Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Transform Your Business Today</h1>
-        <p>Unlock your potential with our innovative solutions</p>
-        <button class="cta-button" onclick="scrollToForm()">Get Started</button>
+        <h1>Build. Launch. Scale.</h1>
+        <p>Custom software and cloud solutions from Enbros Technologies</p>
+        <button class="cta-button" onclick="scrollToForm()">Talk to our team</button>
     </section>
 
     <!-- Features Section -->
     <section class="features">
         <div class="container">
-            <h2 class="section-title">Why Choose Us?</h2>
+            <h2 class="section-title">Why Enbros Technologies?</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">🚀</div>
-                    <h3>Fast Performance</h3>
-                    <p>Experience lightning-fast speeds that will transform the way you work and boost your productivity.</p>
+                    <h3>High-Performance Engineering</h3>
+                    <p>We design and deliver scalable, reliable systems that grow with your business.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🔒</div>
-                    <h3>Secure & Reliable</h3>
-                    <p>Your data is protected with enterprise-grade security and backed by 99.9% uptime guarantee.</p>
+                    <h3>Security by Design</h3>
+                    <p>Best-practice security across the stack—identity, data, and infrastructure.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">💡</div>
-                    <h3>Innovative Solutions</h3>
-                    <p>Stay ahead with cutting-edge technology designed to solve your most complex challenges.</p>
+                    <h3>Product-Focused Delivery</h3>
+                    <p>From idea to launch, we ship features that solve real customer problems.</p>
                 </div>
             </div>
         </div>
@@ -43,20 +43,20 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item">
-                    <h2>10K+</h2>
-                    <p>Happy Customers</p>
+                    <h2>50+</h2>
+                    <p>Successful Projects</p>
                 </div>
                 <div class="stat-item">
                     <h2>99.9%</h2>
-                    <p>Uptime</p>
+                    <p>Uptime SLO</p>
                 </div>
                 <div class="stat-item">
                     <h2>24/7</h2>
                     <p>Support</p>
                 </div>
                 <div class="stat-item">
-                    <h2>150+</h2>
-                    <p>Countries</p>
+                    <h2>8+</h2>
+                    <p>Industries</p>
                 </div>
             </div>
         </div>
@@ -65,9 +65,10 @@
     <!-- Form Section -->
     <section class="form-section" id="form">
         <div class="container">
-            <h2 class="section-title">Ready to Get Started?</h2>
+            <h2 class="section-title">Tell Us About Your Project</h2>
             <div class="form-container">
                 <div id="userForm">
+                    <div class="error-message" id="generalError" style="display:none; margin-bottom: 15px;"></div>
                     <div class="form-group">
                         <label for="name">Full Name *</label>
                         <input type="text" id="name" placeholder="Enter your full name">
@@ -91,17 +92,17 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="message">Message *</label>
-                        <textarea id="message" placeholder="Tell us about your needs..."></textarea>
+                        <label for="message">Project Details *</label>
+                        <textarea id="message" placeholder="What are you building? Timeline, goals, tech stack…"></textarea>
                         <div class="error-message" id="messageError">Please enter a message</div>
                     </div>
 
-                    <button class="submit-button" onclick="handleSubmit()">Submit</button>
+                    <button class="submit-button" onclick="handleSubmit()">Request a consultation</button>
                 </div>
 
                 <div class="success-message" id="successMessage">
-                    <h3>Thank You!</h3>
-                    <p>We've received your information and will get back to you soon.</p>
+                    <h3>Thanks from Enbros Technologies!</h3>
+                    <p>We’ve received your details. Our team will reach out shortly.</p>
                 </div>
             </div>
         </div>
